# ai-agent

./: main.py  pyproject.toml  tests.py
functions/: get_file_content.py  get_files_info.py  run_python.py  write_file.py
